--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
         <div class="service-name">Spa Pedicure</div>
       </div>
       <div class="service-card">
-        <img src="C:\Users\Josephine\OneDrive\Pictures\Pictures\wmd assignment pictures\90 Classy Nail Art Ideas _ Art and Design.jpeg" alt="Nail Art" />
+        <img src=90 Classy Nail Art Ideas _ Art and Design.jpeg />
         <div class="service-name">Nail Art</div>
       </div>
       <div class="service-card">
