--- a/services.html
+++ b/services.html
@@ -84,11 +84,11 @@
     <p class="center-text">Welcome to our service page. Here you will find what we offer:</p>
     <div class="container">
       <div class="service-card">
-        <img src="C:\Users\Josephine\OneDrive\Pictures\Pictures\wmd assignment pictures\classy-almond-shaped-spring-nails-with-chocolate-flower-designs.jpg" alt="Classic Manicure" />
+        <img src=classy-almond-shaped-spring-nails-with-chocolate-flower-designs.jpg />
         <div class="service-name">Classic Manicure</div>
       </div>
       <div class="service-card">
-        <img src="C:\Users\Josephine\OneDrive\Pictures\Pictures\wmd assignment pictures\adobestock_109107469.webp" alt="Spa Pedicure" />
+        <img src= adobestock_109107469.webp/>
         <div class="service-name">Spa Pedicure</div>
       </div>
       <div class="service-card">
@@ -96,15 +96,15 @@
         <div class="service-name">Nail Art</div>
       </div>
       <div class="service-card">
-        <img src="C:\Users\Josephine\OneDrive\Pictures\Pictures\wmd assignment pictures\A Healthy Way to Soak Off Acrylics and Gel-Polish.jpeg" alt="Soak Off" />
+        <img src=A Healthy Way to Soak Off Acrylics and Gel-Polish.jpeg />
         <div class="service-name">Soak Off</div>
       </div>
       <div class="service-card">
-        <img src="C:\Users\Josephine\OneDrive\Pictures\Pictures\wmd assignment pictures\heel-peel-347x360-1.jpg" alt="Instant Foot Peel" />
+        <img src=heel-peel-347x360-1.jpg />
         <div class="service-name">Instant Foot Peel</div>
       </div>
       <div class="service-card">
-        <img src="C:\Users\Josephine\OneDrive\Pictures\Pictures\wmd assignment pictures\2_cc93c4fe-f6a5-4c27-809d-4291cc09ff10_480x480.webp" alt="Gel Nails" />
+        <img src= 2_cc93c4fe-f6a5-4c27-809d-4291cc09ff10_480x480.webp/>
         <div class="service-name">Gel Nails</div>
       </div>
     </div>
