--- a/services.html
+++ b/services.html
@@ -84,27 +84,27 @@
     <p class="center-text">Welcome to our service page. Here you will find what we offer:</p>
     <div class="container">
       <div class="service-card">
-        <img src=classy-almond-shaped-spring-nails-with-chocolate-flower-designs.jpg/>
+        <img src="classic manicure.webp" alt="Hand Nails">
         <div class="service-name">Classic Manicure</div>
       </div>
       <div class="service-card">
-        <img src= adobestock_109107469.webp/>
+        <img src="adobestock_109107469.webp" alt="Spa Pedicure" />
         <div class="service-name">Spa Pedicure</div>
       </div>
       <div class="service-card">
-        <img src=90 Classy Nail Art Ideas _ Art and Design.jpeg/>
+        <img src="90 Classy Nail Art Ideas _ Art and Design.jpeg" alt="Nail Art" />
         <div class="service-name">Nail Art</div>
       </div>
       <div class="service-card">
-        <img src=A Healthy Way to Soak Off Acrylics and Gel-Polish.jpeg/>
+        <img src="A Healthy Way to Soak Off Acrylics and Gel-Polish.jpeg" alt="Soak Off" />
         <div class="service-name">Soak Off</div>
       </div>
       <div class="service-card">
-        <img src=heel-peel-347x360-1.jpg/>
+        <img src="heel-peel-347x360-1.jpg" alt="Instant Foot Peel" />
         <div class="service-name">Instant Foot Peel</div>
       </div>
       <div class="service-card">
-        <img src= 2_cc93c4fe-f6a5-4c27-809d-4291cc09ff10_480x480.webp/>
+        <img src="classy-almond-shaped-spring-nails-with-chocolate-flower-designs.jpg" alt="Gel Nails" />
         <div class="service-name">Gel Nails</div>
       </div>
     </div>
