--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
         <div class="service-name">Spa Pedicure</div>
       </div>
       <div class="service-card">
-        <img src="90 Classy Nail Art Ideas _ Art and Design.jpeg" alt="Nail Art" />
+        <img src="classy-almond-shaped-spring-nails-with-chocolate-flower-designs.jpg" alt="Nail Art" />
         <div class="service-name">Nail Art</div>
       </div>
       <div class="service-card">
@@ -104,7 +104,7 @@
         <div class="service-name">Instant Foot Peel</div>
       </div>
       <div class="service-card">
-        <img src="classy-almond-shaped-spring-nails-with-chocolate-flower-designs.jpg" alt="Gel Nails" />
+        <img src="90 Classy Nail Art Ideas _ Art and Design" alt="Gel Nails" />
         <div class="service-name">Gel Nails</div>
       </div>
     </div>
