Update Posh and Polished by Joe.html

--- a/Posh and Polished by Joe.html
+++ b/Posh and Polished by Joe.html
@@ -131,15 +131,14 @@
 </head>
 <body>
 
-  <header class="header">
-    <div class="logo">Posh and Polished by Joe</div>
+ <header class="header">
+    <div class="logo">Services - Posh and Polished by Joe</div>
     <nav class="nav">
-      <a href="services.html">Services</a>
+      <a href="Posh and Polished by Joe.html">Home</a>
       <a href="pricing.html">Pricing</a>
       <a href="contact.html">Contact</a>
       <a href="book.html">Book Now</a>
     </nav>
-    <button class="menu-toggle" id="menu-toggle">☰</button>
   </header>
 
   <section class="hero">
