--- a/services.html
+++ b/services.html
@@ -103,8 +103,8 @@
         <img src="heel-peel-347x360-1.jpg" alt="Instant Foot Peel" />
         <div class="service-name">Instant Foot Peel</div>
       </div>
-      <div class="service-card">
-        <img src="90 Classy Nail Art Ideas _ Art and Design" alt="Gel Nails" />
+     <div class="service-card">
+        <img src="classy-almond-shaped-spring-nails-with-chocolate-flower-designs.jpg" alt="Gel Nails" />
         <div class="service-name">Gel Nails</div>
       </div>
     </div>
