--- a/services.html
+++ b/services.html
@@ -104,7 +104,7 @@
         <div class="service-name">Instant Foot Peel</div>
       </div>
      <div class="service-card">
-        <img src="classy-almond-shaped-spring-nails-with-chocolate-flower-designs.jpg" alt="Gel Nails" />
+        <img src="90 Classy Nail Art Ideas _ Art and Design.jpeg" alt="Gel Nails" />
         <div class="service-name">Gel Nails</div>
       </div>
     </div>
