--- a/pricing.html
+++ b/pricing.html
@@ -68,32 +68,32 @@
 
       <div class="service">
         <h3>Classic Manicure <span class="price">P100</span></h3>
-        <p>A traditional clean cut with scissors or clippers, styled to perfection.</p>
+        <p>A traditional manicure that includes nail trimming, shaping, cuticle care, and a polished finish for clean, beautiful hands.</p>
       </div>
 
       <div class="service">
         <h3>Spa Pedicure <span class="price">P150</span></h3>
-        <p>Shape and style your beard with precision and care.</p>
+        <p>A relaxing foot treatment that includes soaking, exfoliation, nail shaping, cuticle care, massage, and polish application for refreshed feet.</p>
       </div>
 
       <div class="service">
         <h3>Nail Art <span class="price">P250</span></h3>
-        <p>Complete grooming experience for hair and beard together.</p>
+        <p>Creative and stylish designs painted or applied on the nails, perfect for personalizing your manicure with patterns, gems, or themes.</p>
       </div>
 
       <div class="service">
         <h3>Soak Off <span class="price">P180</span></h3>
-        <p>Fresh fade with optional design – sharp, modern and stylish.</p>
+        <p>Gentle removal of gel or acrylic nails using professional soaking techniques to maintain nail health.</p>
       </div>
 
       <div class="service">
         <h3>Instant Foot Peel <span class="price">P250</span></h3>
-        <p>Fresh fade with optional design – sharp, modern and stylish.</p>
+        <p>A rejuvenating treatment that removes rough, dead skin from the feet, leaving them soft, smooth, and refreshed.</p>
       </div>
 
       <div class="service">
         <h3>Gel Nails <span class="price">120</span></h3>
-        <p>Fresh fade with optional design – sharp, modern and stylish.</p>
+        <p>Long-lasting, chip-resistant gel polish applied to natural nails for a glossy, durable finish that lasts for weeks.</p>
       </div>
   </main>
 
